cookbooks/olympus/zeus/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "zeus"
  labels:
    app.kubernetes.io/instance: "zeus"
    app.kubernetes.io/name: "zeus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "zeus"
      app.kubernetes.io/instance: "zeus"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "zeus"
        app.kubernetes.io/instance: "zeus"
    spec:
      containers:
        - name: "zeus"
          image: "registry.digitalocean.com/zeus-fyi/zeus:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-zeus"
            - mountPath: "/secrets"
              name: "secrets"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          ports:
            - name: "http"
              containerPort: 9001
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: "/health"
              port: "http"
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            {}
      volumes:
        - name: cm-zeus
          configMap:
            name: cm-zeus
            defaultMode: 0744
        - name: secrets
          emptyDir:
            medium: Memory
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
